# drf-data-selector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml  setup.cfg  tox.ini
drf_data_selector/: apps.py  loader.py  models.py  urls.py  views.py
tests/: models.py  selectors.py  settings.py  urls.py
tests/tests/: test_views.py
