[metadata]
name = drf-data-selector
version = 0.1
description = A DDF app to select data from database.
long_description = file: README.md
url = https://github.com/avgoeid/drf-data-selector
author = Maksym Holovenko
author_email = avgoeid@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.2
    djangorestframework >= 3.13
